--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,13 @@
 .Nombre {
     font-size: 150px;
     font-weight: bold;
-    padding-left: 200px;
+    padding-left: 100px;
 }
 
 .Subtitulo {
     z-index: 30;
     font-size: 50px;
-    padding-left: 200px;
+    padding-left: 100px;
     
 }
 
@@ -71,7 +71,7 @@
 .aos {
     color: #F1A600;
     font-size: 50px;
-    padding-left: 200px;
+    padding-left: 100px;
 
 }
 .dos{
@@ -82,7 +82,7 @@
 
 .exp{
     font-size: 50px;
-    padding-left: 200px;
+    padding-left: 100px;
 
 }
 
@@ -92,36 +92,208 @@
 .linked {
     position: absolute;
     top: 500px;
-    left: 205px;
+    left: 105px;
     height: 70px;
 }
 
 .insta {
     position: absolute;
     top: 500px;
-    left: 300px;
+    left: 200px;
     height: 70px;
 }
 .twit {
     position: absolute;
     top: 500px;
-    left: 400px;
+    left: 300px;
     height: 70px;
 }
 .acercademi{
     text-align: center;
     background-color: #242635;
-    height: 400px;
+    height: 500px;
 }
 
 .uvm {
-    margin-left: 100px;
-    margin-right: 250px;
-    background-color: #242635;
+    margin-left: 30px;
+    margin-right: 200px;
+    position: relative;
+bottom: 4px;
   
 }
 
 .acerca {
     font-size: 50px;
     font-weight: semibold;
+}
+
+.div-academlo { 
+    margin-left: 390px;
+    position: relative;
+    bottom: 50px;
+
+}
+
+.div-uvm {
+    margin-left: -330px;
+    position: relative;
+    bottom: 7px;
+}
+
+.Experiencia {
+    text-align: center;
+}
+.subtitulo2 {
+    font-size: 50px;
+}
+.amazon {
+    display: flex;
+    justify-content: center;
+}
+
+.amazon >* {
+    margin-right: 173px;
+}
+
+.textoacerca {
+    padding: 0 250px;
+}
+
+.airbnb {
+    display: flex;
+    justify-content: center;  
+}
+.airbnb >*{
+    margin-right: 170px;
+}
+.google {
+    display: flex;
+    justify-content: center; 
+}
+.google >* {
+    margin-right: 155px;
+}
+
+.lineaamarilla {
+    position: absolute;
+    right: 250px;
+    top: 1500px;
+}
+
+.mishabilidades {
+    text-align: center;
+}
+.porcentaje {
+    color: #F1A600;
+    font-size: 50px;
+    margin-bottom: 25px;
+}
+.habilidad {
+    color: #ffff;
+    font-size: 30px;
+    padding-left: 50px;
+    
+}
+.porcentajes {
+    text-align: justify;
+    margin-left: 300px;
+    
+}
+.subtitulo3 {
+    font-size: 40px;
+    text-align: left;
+    margin-left: 300px;
+}
+
+.ecommerce {
+    background-color: #F1A600;
+    height: 380px;
+    width: 550px;
+    margin-left: 60px;
+}
+.app{
+    background-color:#242635;
+    height: 380px;
+    width: 550px;
+    margin-left: 600px;
+}
+
+.imagen2 {
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.training {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 30px;
+    margin-left: 30px;
+}
+.imagen1{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.skincare {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 30px;
+}
+
+.writer {
+margin-left: 60px;
+background-color: #F1A600;
+width: 550px;
+height: 380px;
+}
+.imagen3 {
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.personal {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 30px;
+}
+
+.subtitulo4 {
+    font-size: 40px;
+    text-align: center;
+    margin-left: 300px;
+}
+
+.telefono {
+    height: 130px;
+    width: 130px;
+}
+.datos {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+width: 200px;
+margin-left: 450px;
+}
+
+.email {
+    height: 130px;
+    width: 130px;
+}
+.correo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 200px;
+        margin-left: 900px;
+}
+
+.numero{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.num {
+    font-weight: normal;
+    font-size: 15px;
 }
