--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,17 +14,22 @@
 .ul {
     display: flex;
     padding: 0 100px 0 0;
+    position: fixed;
+    z-index: 50;
+   
 }
 
 .li{
     padding: 30px  ;
     list-style: none;
     line-height: 20px;
+    
 }
 .a {
     color: #ffff;
     text-decoration: none;
     font-size: 18px;
+ 
 }
 .a:hover{
     color: #F1A600;
@@ -35,6 +40,7 @@
     background-color: #1F1D2C;
     height: 80px;
     width: 100%;
+    
     
 }
 
@@ -51,19 +57,23 @@
     font-size: 150px;
     font-weight: bold;
     padding-left: 100px;
+    position: relative;
+    z-index: 20;
 }
 
 .Subtitulo {
-    z-index: 30;
+    position: relative;
+    z-index: 20;
     font-size: 50px;
     padding-left: 100px;
     
 }
 
 .fotoequis {
-    z-index: 20;
+    
     padding-left: 550px;
     position: relative;
+    z-index: 1;
     top: -170px;
     
 
@@ -157,6 +167,7 @@ bottom: 4px;
 
 .textoacerca {
     padding: 0 250px;
+    line-height: 25px;
 }
 
 .airbnb {
@@ -187,6 +198,8 @@ bottom: 4px;
     color: #F1A600;
     font-size: 50px;
     margin-bottom: 25px;
+    position: relative;
+    z-index: 10;
 }
 .habilidad {
     color: #ffff;
@@ -203,6 +216,8 @@ bottom: 4px;
     font-size: 40px;
     text-align: left;
     margin-left: 300px;
+    position: relative;
+    z-index: 10;
 }
 
 .ecommerce {
@@ -296,4 +311,73 @@ margin-left: 450px;
 .num {
     font-weight: normal;
     font-size: 15px;
+}
+
+.Contacto {
+    background-color: #242635;
+   padding:  50px 0;
+}
+
+
+.footer {
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    background-color: #1F1D2C;
+    
+}
+
+.footer h3 {
+  line-height: 50px;
+    color: white;
+}
+.footer p{
+    background-color: transparent;
+    color: white;
+}
+
+.cuadrado-fondo1 {
+position: absolute;
+right: 0;
+z-index: 0;
+width: 60%;
+}
+
+.rectangulo-alargado {
+position: absolute;
+left: 0;
+
+height: 420px;
+width: 33%;
+z-index: 1;
+
+}
+
+.boton-hamburguesa{
+border: none;
+background: transparent;
+font-size: 25px;
+color: white;
+padding-right: 10px;
+display: none;
+}
+
+
+@media (min-width: 350px) and (max-width: 768px) {
+
+.header {
+    height: 60px;
+}
+
+.ul {
+
+    flex-direction: column;
+   background-color: darkslategray;
+  position: fixed;
+  width: 100%;
+  z-index: 50;
+  
+}
+
+
 }
